--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FireKylin</title>  
     <link rel="shortcut icon" href="/static/favicon.ico">
-    <link rel="stylesheet" href="/static/node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/admin/admin.css" />
-
-    <script src="/static/node_modules/jquery/dist/jquery.js"></script>
-    <script src="/static/node_modules/react/dist/react-with-addons.js"></script>
-    <script src="/static/node_modules/react-bootstrap/dist/react-bootstrap.js"></script>
-    <script src="/static/node_modules/react-router/umd/ReactRouter.js"></script>
-    <script src="/static/node_modules/moment/moment.js"></script>
-    <script src="/static/js/admin/combo.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="/static/node_modules/bootstrap/dist/css/bootstrap.css" />-->
+    <link rel="stylesheet" type="text/css" href="/static/dist/admin.css" />
+    <script src="/static/dist/admin.bundle.js"></script>
 </head>
 <body>
 </body>
