--- a/www/static/css/admin/PostPAge.scss
+++ b/www/static/css/admin/PostPAge.scss
@@ -3,6 +3,9 @@
 .PostPage {
 
   .title {
+
+    margin-bottom: 20px;
+
     h2 {
       display: inline-block;
     }
@@ -12,4 +15,5 @@
       margin-left: 10px;
     }
   }
+
 }
