--- a/www/static/css/admin/1_common.scss
+++ b/www/static/css/admin/1_common.scss
@@ -1,10 +1,16 @@
 .page {
-  flex: 1 0;
-  padding: 20px;
 
-  h2 {
+  >.title {
     font-size: 20px;
+    font-weight: bold;
+    margin: -20px -20px 20px -20px;
+    padding: 20px;
+
+    background: #fbfbfb;
+    border-bottom: 1px solid #dcdcdc;
   }
+
+  padding-bottom: 20px;
 }
 
 .button {
@@ -26,38 +32,53 @@
   text-decoration: none;
   color: #fff;
 
-  &:active {
-    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
-    outline: none;
-  }
-
-  &.white {
+  &.white, &.default {
     color: #333;
     background-color: #fff;
     border-color: #ccc;
 
-    &:hover {
+    &:not(:disabled):hover {
       color: #333;
       background-color: #e6e6e6;
       border-color: #adadad;
     }
   }
 
-  &.blue {
+  &.green, &.success {
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+
+    &:not(:disabled):hover {
+      background-color: #449d44;
+      border-color: #398439;
+    }
+  }
+
+  &.blue, &.primary {
     background-color: #337ab7;
     border-color: #2e6da4;
 
-    &:hover {
+    &:not(:disabled):hover {
       background-color: #286090;
       border-color: #204d74;
     }
   }
 
-  &.lightblue {
+  &.red, &.danger {
+    background-color: #d9534f;
+    border-color: #d43f3a;
+
+    &:not(:disabled):hover {
+      background-color: #c9302c;
+      border-color: #ac2925;
+    }
+  }
+
+  &.lightblue, &.info {
     background-color: #5bc0de;
     border-color: #46b8da;
 
-    &:hover {
+    &:not(:disabled):hover {
       background-color: #31b0d5;
       border-color: #269abc;
     }
@@ -79,5 +100,16 @@
 
   &:hover {
     text-decoration: none;
+  }
+
+  &:active {
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+    outline: none;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: .5;
+
   }
 }
