--- a/view/web/inc/footer.html
+++ b/view/web/inc/footer.html
@@ -1,2 +1,7 @@
 <% include ../custom/footer.html %>
-Design credit: <a href="http://shashankmehta.in/archive/2012/greyshade.html">Shashank Mehta</a>
+<p>
+  Powered by
+  <a href="http://thinkjs.org">ThinkJS</a> &
+  <a href="http://firekylin.org">FireKylin</a> &
+  <a href="https://github.com/shashankmehta/greyshade">GreyShade</a>
+</p>
