--- a/view/web/inc/navigation.html
+++ b/view/web/inc/navigation.html
@@ -1,8 +1,8 @@
 <% include ../custom/navigation.html %>
-<% if (site.description) { %>
+<% if (site.aboutme) { %>
 <section class="aboutme">
   <p>
-    <%= site.description %>
+    <%= site.aboutme %>
   </p>
 </section>
 <% } %>
