--- a/www/static/css/web/_greyshade.scss
+++ b/www/static/css/web/_greyshade.scss
@@ -90,6 +90,7 @@ body {
 		  text-align: center;
 		  margin: 0px 70px 0px 40px;
 		  width: auto;
+			line-height: 20px;
 		}
 		.mid-col-container {
 			padding: 0px 70px 0px 100px;
