--- a/view/web/inc/post/sharing.html
+++ b/view/web/inc/post/sharing.html
@@ -1,15 +1,19 @@
 <div class="share">
-  <div class="addthis_toolbox addthis_default_style ">
-    <% if (site.facebook_like) { %>
-    <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-    <% } %>
-    <% if (site.twitter_tweet_button) { %>
-    <a class="addthis_button_tweet"></a>
-    <% } %>
-    <% if (site.google_plus_one) { %>
-    <a class="addthis_button_google_plusone" g:plusone:size="{{ site.google_plus_one_size }}"></a>
-    <% } %>
-    <a class="addthis_counter addthis_pill_style"></a>
+  <% if (site.share_diy) { %>
+    <%- site.share_diy %>
+  <% } else { %>
+  <!-- JiaThis Button BEGIN -->
+  <div class="share-inner <%= site.share_size %>">
+    <span class="jiathis_txt share-to-txt">分享到：</span>
+    <% if (site.share_to_weibo) { %><a class="jiathis_button_tsina"></a><% } %>
+    <% if (site.share_to_weixin) { %><a class="jiathis_button_weixin"></a><% } %>
+    <% if (site.share_to_facebook) { %><a class="jiathis_button_fb"></a><% } %>
+    <% if (site.share_to_twitter) { %><a class="jiathis_button_twitter"></a><% } %>
+    <% if (site.share_other) { %><a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank"></a><% } %>
+    <% if (site.share_number) { %><a class="jiathis_counter_style"></a><% } %>
   </div>
-  <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid={{ site.addthis_profile_id }}"></script>
+  <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
+  <!-- JiaThis Button END -->
+
+  <% } %>
 </div>
