--- a/view/web/post_item.html
+++ b/view/web/post_item.html
@@ -1,13 +1,13 @@
 <% include inc/before.html %>
 
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting"><% include inc/article.html %></article>
-<% if (page.sharing) { %>
+<% if (site.share_on) { %>
 <% include inc/post/sharing.html %>
 <% } %>
-<% if (site.disqus_short_name && page.comments) { %>
+<% if (site.discuss_on && !page.disableDiscuss) { %>
 <section id="comment">
   <h1 class="title">Comments</h1>
-  <div id="disqus_thread" aria-live="polite"><% include inc/post/disqus_thread.html %></div>
+  <div id="disqus_thread" aria-live="polite"><% include inc/post/discuss.html %></div>
 </section>
 <% } %>
 
