--- a/view/web/post_list.html
+++ b/view/web/post_list.html
@@ -8,12 +8,12 @@
 </div>
 <nav id="pagenavi">
   <% if (paginator.previous_page) { %>
-  <a href="<%= root_url %>/post/list?page=<%= paginator.previous_page %>" class="prev">Prev</a>
+  <a href="<%= site.url %>/post/list?page=<%= paginator.previous_page %>" class="prev">Prev</a>
   <% } %>
   <% if (paginator.next_page) { %>
-  <a href="<%= root_url %>/post/list?page=<%= paginator.next_page %>" class="next">Next</a>
+  <a href="<%= site.url %>/post/list?page=<%= paginator.next_page %>" class="next">Next</a>
   <% } %>
-  <div class="center"><a href="<%= root_url %>/archives">Blog Archives</a></div>
+  <div class="center"><a href="<%= site.url %>/archives">Blog Archives</a></div>
 </nav>
 
 <% include inc/after.html %>
