--- a/www/static/css/admin/1_common.scss
+++ b/www/static/css/admin/1_common.scss
@@ -113,3 +113,108 @@
 
   }
 }
+
+.form {
+
+  $labelWidth: 150px;
+  $fieldWidth: 300px;
+
+  .block {
+    line-height: 50px;
+    margin: 20px 0;
+  }
+
+  .title {
+    background: #F1F7FD;
+    padding-left: 8px;
+    color: #09c;
+    border-radius: 3px;
+    h3 {
+      display: inline-block;
+    }
+  }
+
+  .content {
+    color: #555;
+
+    a {
+      color: #0088c3;
+    }
+
+    input.text {
+      width: $fieldWidth;
+      margin-right: -$labelWidth + 20px;
+      height: 30px;
+      padding: 5px 10px;
+      font-size: 12px;
+      line-height: 1.5;
+      color: #555;
+      background-image: none;
+      border: 1px solid #ccc;
+      box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+
+      &:focus {
+        border-color: #66afe9;
+        outline: none;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6)
+      }
+    }
+
+    input[type=radio], input[type=checkbox] {
+      margin-right: 5px;
+    }
+
+    textarea {
+      @extend input.text;
+      vertical-align: top;
+      margin-top: 5px;
+      height: 80px;
+    }
+
+  }
+
+  .field {
+    padding-left: 8px;
+
+    >label {
+      display: inline-block;
+      width: $labelWidth;
+      font-weight: bold;
+      font-size: 14px;
+    }
+
+    .hint {
+      margin-left: $labelWidth;
+    }
+  }
+
+  .hint {
+    color: #555;
+    display: inline-block;
+    margin-left: 20px;
+    font-style: italic;
+    font-size: 12px;
+  }
+
+
+  .button-wrapper {
+    margin-top: 30px;
+    padding-left: 158px;
+  }
+
+  .input-wrapper {
+    display: inline-block;
+    width: $fieldWidth;
+    margin-right: -$labelWidth + 20px;
+    >label {
+      margin-right: 20px;
+    }
+  }
+
+  .input-hint {
+    display: inline-block;
+    line-height: 1.5em;
+    vertical-align: top;
+    margin-top: 15px;
+  }
+}
