--- a/www/static/css/web/parts/_article.scss
+++ b/www/static/css/web/parts/_article.scss
@@ -1,7 +1,7 @@
 article{
 	border-bottom: 1px solid $color-gray04;
 	border-top: 1px solid $color-gray05;
-	padding: 30px 0;
+	padding: 30px 0 10px 0;
 	position: relative;
 	@media screen and (max-width: 800px){
 		padding-bottom: 15px;
