--- a/view/web/category_list.html
+++ b/view/web/category_list.html
@@ -2,9 +2,19 @@
 
 <div itemscope itemtype="http://schema.org/Blog">
 
-  <% list.forEach(function(category){ %>
-  <p><a href="<%= site.url %>/category/<%= category.id %>"><%= category.name %>(<%= category.count %>)</a></p>
-  <% })%>
+  <div id="content" class="inner">
+    <article class="post detail hentry">
+      <h1 class="title entry-title">全部分类</h1>
+
+      <div class="entry-content">
+        <ul>
+          <% list.forEach(function(category){ %>
+          <li><a href="<%= site.url %>category/<%= category.id %>"><%= category.name %>(<%= category.count %>)</a></li>
+          <% })%>
+        </ul>
+      </div>
+    </article>
+  </div>
 </div>
 
 <% include inc/after.html %>
