--- a/www/static/css/admin/TopBar.scss
+++ b/www/static/css/admin/TopBar.scss
@@ -21,10 +21,10 @@
   a {
     color: #eee;
     text-decoration: none;
+    transition:.15s linear;
 
     &:hover {
       color: #00b9eb;
-      text-decoration: underline;
     }
   }
 
