add tag web show

--- a/view/web/inc/article.html
+++ b/view/web/inc/article.html
@@ -1,5 +1,8 @@
 <div class="meta">
   <div class="date"><% include post/date.html %></div>
+  <% if (type == "item") {%>
+  <div class="tags"><% include post/tags.html %></div>
+  <%}%>
   <div class="tags"><% include post/categories.html %></div>
   <% if (site.discuss_on && site.discuss_numbercode) { %>
   <div class="comments"><%- filters.parseCode(site.discuss_numbercode, post) %></div>
