--- a/view/web/custom/navigation.html
+++ b/view/web/custom/navigation.html
@@ -1,5 +1,5 @@
 <ul class="main">
-  <li><a href="<%= site.url %>">首页</a></li>
+  <li><a href="<%= site.url || '/' %>">首页</a></li>
   <li><a href="<%= site.url %>category">分类</a></li>
   <li><a href="<%= site.url %>archives">存档</a></li>
   <li><a href="http://about.me/shashankmehta">关于我</a></li>
