fix not correct url and logo not show

--- a/view/web/inc/header.html
+++ b/view/web/inc/header.html
@@ -1,5 +1,5 @@
 <div class="profilepic">
-  <img src="<%= site.url %>static/images/logo.jpg" alt="Profile Picture" style="width: 160px;" />
+  <img src="<%= site.url %>/static/images/logo.jpg" alt="Profile Picture" style="width: 160px;" />
 </div>
 <% include ../custom/header.html %>
 <nav id="main-nav"><% include navigation.html %></nav>
