--- a/view/web/inc/archive_post.html
+++ b/view/web/inc/archive_post.html
@@ -3,6 +3,8 @@
     <span class="date"><time datetime="<%= post.date %>" itemprop="datePublished"><%= filters.formatDate(post.date, 'M/D') %></time></span>
     <br>
     <span class="tags"><% include post/categories.html %></span>
+    <br>
+    <span class="tags"><% include post/tags.html %></span>
     <% if (site.disqus_short_name && post.comments == true && site.disqus_show_comment_count == true) { %>
     <span class="comments"><a href="/<%= site.url %><%= post.url %>#disqus_thread">Comments</a></span>
     <% } %>
