fxi tag function and add auto save function

--- a/view/web/inc/header.html
+++ b/view/web/inc/header.html
@@ -30,7 +30,7 @@
     <a class="quora" href="https://weibo.com/<%= site.sns_weibo %>" title="微博">微博</a>
     <% } %>
     <% if (site.rss_on) { %>
-    <a class="rss" href="<%= site.url %>atom.xml" title="RSS">RSS</a>
+    <a class="rss" href="/<%= site.url %>atom.xml" title="RSS">RSS</a>
     <% } %>
   </div>
 </nav>
