--- a/view/web/tag_list.html
+++ b/view/web/tag_list.html
@@ -4,7 +4,7 @@
 
     <div id="content" class="inner">
         <article class="post detail hentry">
-            <h1 class="title entry-title">全部分类</h1>
+            <h1 class="title entry-title">全部标签</h1>
 
             <div class="entry-content">
                 <ul>
