修复在mysql5.6的某些版本下date默认数据格式不对导致不能写入的问题

--- a/view/web/custom/navigation.html
+++ b/view/web/custom/navigation.html
@@ -3,5 +3,5 @@
   <li><a href="/<%= site.url %>category">分类</a></li>
   <li><a href="/<%= site.url %>tag">标签</a></li>
   <li><a href="/<%= site.url %>archives">存档</a></li>
-  <li><a href="http://about.me/shashankmehta">关于我</a></li>
+  <li><a href="http://weibo.com/silverna" target="_blank">关于我</a></li>
 </ul>
