--- a/view/admin/user_login.html
+++ b/view/admin/user_login.html
@@ -32,7 +32,7 @@ a:hover{
       <h1 class="text-center">
         <a href="/">Firekylin</a>
         </h1>
-        <form role="form" action="?" method="post" onsubmit="return false">
+        <form role="form" action="?" method="post">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="用户名" name="username">
         </div>
